manifests/argocd-extra/prod.generated.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: secret-pin
  name: secret-pin
  namespace: argo-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: secret-pin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: secret-pin
    spec:
      containers:
      - image: registry.k8s.io/pause:3.10.1
        imagePullPolicy: IfNotPresent
        name: pause
        resources:
          limits:
            cpu: 1m
            memory: 10Mi
          requests:
            cpu: 1m
            memory: 1Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        volumeMounts:
        - mountPath: /mnt/secrets-store
          name: secrets-store-inline
          readOnly: true
      securityContext:
        runAsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: secret-pin
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: sakuracloud-secret
        name: secrets-store-inline
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-metrics
  namespace: argo-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: argo-cd
  ingress:
  - fromEntities:
    - cluster
    toPorts:
    - ports:
      - port: metrics
        protocol: TCP
      rules:
        http:
        - method: GET
          path: /metrics
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argo-system
spec:
  hostnames:
  - argocd.k8s-prod.ictsc.net
  parentRefs:
  - name: web
    namespace: gateway
  rules:
  - backendRefs:
    - name: argo-cd-argocd-server
      port: 81
    matches:
    - headers:
      - name: Content-Type
        value: application/grpc
  - backendRefs:
    - name: argo-cd-argocd-server
      port: 80
    matches:
    - method: GET
      path:
        type: PathPrefix
        value: /api/v1/stream/
    timeouts:
      request: 1h
  - backendRefs:
    - name: argo-cd-argocd-server
      port: 80
